# python-pipeline

./: .flake8  Makefile  README.md  pyproject.toml
.circleci/: config.yml
examples/file_operators/: pipelines.py
examples/file_operators/resources/files/: file1.txt  file2.txt  file3.txt  file4.txt
examples/file_operators/resources/outputs/: output.txt
pipeline/: __init__.py  operators.py  pipeline.py
tests/: test_stream.py
