[tool.poetry]
name = "python-pipeline"
version = "0.1.0"
description = "Python local pipeline management"
authors = ["prashanth <prashanthsandela@gmail.com>"]
license = "Apache License 2.0"
packages = [
    { include = "pipeline" }
]

[tool.poetry.dependencies]
python = "^3.7.1"

[tool.poetry.dev-dependencies]
black = "^21.10b0"
flake8 = "^4.0.1"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
